--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,10 @@ GitPython==3.1.43
 google-api-core==2.18.0
 google-auth==2.29.0
 google-cloud-language==2.13.3
+google.cloud < 0.34.0
+google.cloud.core < 1.7.2
+google.auth < 1.34.0
+google.resumable.media < 1.3.3
 googleapis-common-protos==1.63.0
 grpcio==1.62.1
 grpcio-status==1.62.1
